# OtusCourse

./: .gitignore  CMakeLists.txt  README.md  main.cpp
.github/workflows/: release.yml
Lab1/: main.cpp
Lab2/: ip_filter.cpp  test.cpp
Lab3/source/: main.cpp
Lab3/source/allocator/: allocator.hpp  map_allocator.hpp
Lab3/source/map/: cm  custom_map.cpp  map_iterator.cpp
